# graduate-work

./: README.md  app.py  pyproject.toml  Тестовый_полигон.ipynb
controllers/: phase_controller.py
gui/: helper.py  main_window.py  portrait_window.py
models/: ode_storage.py  runge_kutta.py
src/: ode_storage.py  rungekutta.py
utils/: helper.py
views/: main_window.py  portrait_window.py
views/frames/: cycle_finder_frame.py  float_entry_frame.py  phase_trajectory_frame.py
views/windows/: main_window.py  progress_window.py
