[tool.poetry]
name = "graduate-work"
version = "0.0.1"
description = "Моя выпускная квалификационная работа"
authors = ["Kirill Petryashev <petryashev.k@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
